--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,6 @@ verify_ssl = true
 config = "==0.4.0"
 confusable-homoglyphs = "==3.2.0"
 dj-database-url = "==0.5.0"
-django = "==2.2"
 django-bootstrap3 = "==11.0.0"
 django-bootstrap4 = "==0.0.7"
 django-heroku = "==0.3.1"
@@ -24,6 +23,7 @@ python-decouple = "==3.1"
 pytz = "==2018.6"
 six = "==1.11.0"
 whitenoise = "==4.1"
+django = "*"
 
 [requires]
 python_version = "3.7"
