--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SECRET_KEY='14jmln6)lccjmj9@km^$+-ob9uy!r-ie)lec52bu(twcha&45='
 DEBUG=True
-DB_NAME='instagram'
-DB_USER='ubeezy'
+DB_NAME= 868._.joker 
+DB_USER='868._.joker'
 DB_PASSWORD='ubeezy123'
 DB_HOST='postgres'
 MODE='dev'
